--- a/index.html
+++ b/index.html
@@ -7,6 +7,8 @@
         <meta name="viewport" content="width=device-width, initial-scale=1">
 
         <link href="https://fonts.googleapis.com/css?family=Montserrat:300,400,600&amp;subset=latin-ext" rel="stylesheet">
+	<link rel="shortcut icon" type="image/x-icon" href="//cdn.shopify.com/s/files/1/1769/5297/files/vt_32x32.png?v=1538115218">
+    
 
         <!-- CSS -->
         <link href="assets/css/main.css" rel="stylesheet">
