--- a/index.html
+++ b/index.html
@@ -70,7 +70,7 @@
 										
                                     </h2>
 									<b style="color:red">WE MAKE SLIM AND PORTABLE DESIGN</b><br>
-                                    <div class="title__description">Delivering extraordinary creations from the very beginning of the time!</div>
+                                    <div class="title__description">Delivering extraordinary products from the very beginning of the time!</div>
 
                                 </div> <!-- .title-01 -->
                             </div>
