--- a/index1.html
+++ b/index1.html
@@ -11,7 +11,7 @@
 <!-- partial:index.partial.html -->
 <div class="header">
     <ul class="nav">
-      <li><a href="/" id="view-top-shelf">Shelf 1</a></li>
+      <li><a href="../photos/1.jpg" id="view-top-shelf">Shelf 1</a></li>
       <li><a href="/" id="view-middle-shelf">Shelf 2</a></li>
       <li><a href="/" id="view-bottom-shelf">Shelf 3</a></li>
     </ul>
