--- a/index1.html
+++ b/index1.html
@@ -4,14 +4,14 @@
   <meta charset="UTF-8">
   <title>Mouse Accesories</title>
   <link href='https://fonts.googleapis.com/css?family=Englebert' rel='stylesheet' type='text/css'><link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/meyer-reset/2.0/reset.min.css">
-<link rel="stylesheet" href="./style.css"><script src="https://cdnjs.cloudflare.com/ajax/libs/prefixfree/1.0.7/prefixfree.min.js"></script>
+<link rel="stylesheet" href="style.css"><script src="https://cdnjs.cloudflare.com/ajax/libs/prefixfree/1.0.7/prefixfree.min.js"></script>
 
 </head>
 <body>
 <!-- partial:index.partial.html -->
 <div class="header">
     <ul class="nav">
-      <li><a href="../photos/1.jpg" id="view-top-shelf">Shelf 1</a></li>
+      <li><a href="/" id="view-top-shelf">Shelf 1</a></li>
       <li><a href="/" id="view-middle-shelf">Shelf 2</a></li>
       <li><a href="/" id="view-bottom-shelf">Shelf 3</a></li>
     </ul>
@@ -92,7 +92,7 @@
   </div>
 <!-- partial -->
   <script src='http://cdnjs.cloudflare.com/ajax/libs/jquery/2.1.3/jquery.min.js'></script>
-<script  src="./script.js"></script>
+<script  src="script.js"></script>
 
 </body>
 </html>
