--- a/index1.html
+++ b/index1.html
@@ -4,7 +4,7 @@
   <meta charset="UTF-8">
   <title>Mouse Accesories</title>
   <link href='https://fonts.googleapis.com/css?family=Englebert' rel='stylesheet' type='text/css'><link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/meyer-reset/2.0/reset.min.css">
-<link rel="stylesheet" href="/style.css">
+<link rel="stylesheet" href="style.css">
 <script src="https://cdnjs.cloudflare.com/ajax/libs/prefixfree/1.0.7/prefixfree.min.js"></script>
 
 </head>
@@ -93,7 +93,7 @@
   </div>
 <!-- partial -->
   <script src='http://cdnjs.cloudflare.com/ajax/libs/jquery/2.1.3/jquery.min.js'></script>
-<script  src="/script.js"></script>
+<script  src="script.js"></script>
 
 </body>
 </html>
