--- a/index1.html
+++ b/index1.html
@@ -9,7 +9,7 @@
 <body>
 <!-- partial:index.partial.html -->
 <ul>
-  <li><img src="1.jpg"></a></li>
+  <li><a href="1.jpg"></a></li>
   <li><a href="#"></a></li>
   <li><a href="#"></a></li>
   <li><a href="#"></a></li>
