--- a/index1.html
+++ b/index1.html
@@ -2,20 +2,66 @@
 <html lang="en" >
 <head>
   <meta charset="UTF-8">
-  <title>fancy css gallery</title>
-  <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/meyer-reset/2.0/reset.min.css">
-<link rel="stylesheet" href="./style.css">
+  <title>3D TRANSFORM GALLERY - cube rotate</title>
+  <meta name="viewport" content="width=device-width, initial-scale=1"><link rel="stylesheet" href="./style.css">
 </head>
 <body>
 <!-- partial:index.partial.html -->
-<ul>
-  <li><a href="1.jpg"></a></li>
-  <li><a href="#"></a></li>
-  <li><a href="#"></a></li>
-  <li><a href="#"></a></li>
-  <li><a href="#"></a></li>
-  <li><a href="#"></a></li>
-</ul>
+<div class="container">
+		<header class="main-header clearfix">
+			<img class="logo" src="http://gdurl.com/78rD">
+			<h1 class="name">3DTransform <span>Gallery</span></h1>
+		</header>
+
+		<div class="content clearfix">
+
+			<div class="cube-container">
+				<div class="photo-cube">
+
+					<img class="front"src="http://gdurl.com/PdNJ" alt="">
+					<div class="back photo-desc">
+					  <h3>Earth from Space</h3>
+					  <p>Aenean lacinia bibendum nulla sed consectetur. Fusce dapibus, tellus ac cursus commodo.</p>
+						<a href="#" class="button">download</a>
+					</div>
+					<img class="left" src="http://gdurl.com/zDJz" alt="">
+					<img class="right" src="http://gdurl.com/JLdx" alt="">
+
+				</div>
+			</div>	
+
+			<div class="cube-container">
+				<div class="photo-cube">
+
+					<img class="front" src="http://gdurl.com/oxTp" alt="">
+					<div class="back photo-desc">
+					  <h3>Space Images</h3>
+					  <p>Aenean lacinia bibendum nulla sed consectetur. Fusce dapibus, tellus ac cursus commodo.</p>
+						<a href="#" class="button">download</a>
+					</div>
+					<img class="left" src="http://gdurl.com/A2BF" alt="">
+					<img class="right" src="http://gdurl.com/wt4v" alt="">
+
+				</div>
+			</div>	
+
+			<div class="cube-container">
+				<div class="photo-cube">
+
+					<img class="front" src="http://gdurl.com/tvtR" alt="">
+					<div class="back photo-desc">
+					  <h3>The Milky Way</h3>
+					  <p>Aenean lacinia bibendum nulla sed consectetur. Fusce dapibus, tellus ac cursus commodo.</p>
+						<a href="#" class="button">download</a>
+					</div>
+					<img class="left" src="http://gdurl.com/tvtR" alt="">
+					<img class="right" src="http://gdurl.com/VjHH" alt="">
+
+				</div>
+			</div>	
+
+		</div>
+	</div>
 <!-- partial -->
   
 </body>
