--- a/index1.html
+++ b/index1.html
@@ -18,14 +18,14 @@
 			<div class="cube-container">
 				<div class="photo-cube">
 
-					<img class="front"src="http://gdurl.com/PdNJ" alt="">
+					<img class="front"src="1.jpg" alt="">
 					<div class="back photo-desc">
 					  <h3>Earth from Space</h3>
 					  <p>Aenean lacinia bibendum nulla sed consectetur. Fusce dapibus, tellus ac cursus commodo.</p>
 						<a href="#" class="button">download</a>
 					</div>
-					<img class="left" src="http://gdurl.com/zDJz" alt="">
-					<img class="right" src="http://gdurl.com/JLdx" alt="">
+					<img class="left" src="2.jpg" alt="">
+					<img class="right" src="3.jpg" alt="">
 
 				</div>
 			</div>	
@@ -33,14 +33,14 @@
 			<div class="cube-container">
 				<div class="photo-cube">
 
-					<img class="front" src="http://gdurl.com/oxTp" alt="">
+					<img class="front" src="4.jpg" alt="">
 					<div class="back photo-desc">
 					  <h3>Space Images</h3>
 					  <p>Aenean lacinia bibendum nulla sed consectetur. Fusce dapibus, tellus ac cursus commodo.</p>
 						<a href="#" class="button">download</a>
 					</div>
-					<img class="left" src="http://gdurl.com/A2BF" alt="">
-					<img class="right" src="http://gdurl.com/wt4v" alt="">
+					<img class="left" src="5.jpg" alt="">
+					<img class="right" src="6.jpg" alt="">
 
 				</div>
 			</div>	
@@ -54,8 +54,8 @@
 					  <p>Aenean lacinia bibendum nulla sed consectetur. Fusce dapibus, tellus ac cursus commodo.</p>
 						<a href="#" class="button">download</a>
 					</div>
-					<img class="left" src="http://gdurl.com/tvtR" alt="">
-					<img class="right" src="http://gdurl.com/VjHH" alt="">
+					<img class="left" src="7.jpg" alt="">
+					<img class="right" src="8.jpg" alt="">
 
 				</div>
 			</div>	
