--- a/index1.html
+++ b/index1.html
@@ -10,7 +10,7 @@
 <div class="container">
 		<header class="main-header clearfix">
 			<img class="logo" src="http://gdurl.com/78rD">
-			<h1 class="name">3DTransform <span>Gallery</span></h1>
+			<h1 class="name">Computer <span>Mouse</span></h1>
 		</header>
 
 		<div class="content clearfix">
@@ -20,8 +20,8 @@
 
 					<img class="front"src="1.jpg" alt="">
 					<div class="back photo-desc">
-					  <h3>Earth from Space</h3>
-					  <p>Aenean lacinia bibendum nulla sed consectetur. Fusce dapibus, tellus ac cursus commodo.</p>
+					  <h3>Gaming Mouse</h3>
+					  <p>.</p>
 						<a href="#" class="button">download</a>
 					</div>
 					<img class="left" src="2.jpg" alt="">
@@ -35,7 +35,7 @@
 
 					<img class="front" src="4.jpg" alt="">
 					<div class="back photo-desc">
-					  <h3>Space Images</h3>
+					  <h3>Wired Mouse</h3>
 					  <p>Aenean lacinia bibendum nulla sed consectetur. Fusce dapibus, tellus ac cursus commodo.</p>
 						<a href="#" class="button">download</a>
 					</div>
@@ -50,7 +50,7 @@
 
 					<img class="front" src="http://gdurl.com/tvtR" alt="">
 					<div class="back photo-desc">
-					  <h3>The Milky Way</h3>
+					  <h3>Wireless Mouse</h3>
 					  <p>Aenean lacinia bibendum nulla sed consectetur. Fusce dapibus, tellus ac cursus commodo.</p>
 						<a href="#" class="button">download</a>
 					</div>
