--- a/index.html
+++ b/index.html
@@ -83,7 +83,7 @@
 		
 
         <div class="button-group">
-            <a href="index1.html" class="btn btn-outline-primary button-sm"><b>Home</b></a>
+            <a href="index.html" class="btn btn-outline-primary button-sm"><b>Home</b></a>
             <a href="index1.html" class="btn btn-outline-primary button-sm"><b>Computer Accessories</b></a>
             <a href="index.html" class="btn btn-outline-primary button-sm"><b>Gaming Mouse</b></a>
             <a href="index.html" class="btn btn-outline-primary button-sm"><b>Wireless Mouse</b></a>
