--- a/index.html
+++ b/index.html
@@ -65,6 +65,7 @@
                                         <strong class="hero-section__words">
                                             <span class="title__effect is-visible">VicTsing</span>
                                             <span class="title__effect">Creative</span>
+						 <span class="title__effect">Productive</span>
                                       
                                         </strong>
 										
