--- a/index.html
+++ b/index.html
@@ -42,7 +42,10 @@
 
                     <div class="container">
                         <div class="row">
+						<a href="/" title="Home"  rel="home" id="link-logo">
 						
+                          <b style="color:#827653">POWERED BY AI</b>
+                      </a>
 					<svg viewBox="0 0 960 300">
 	<symbol id="s-text">
 		<text text-anchor="middle" x="50%" y="80%">VicTsing</text>
